fix: make buttons look like further buttons (#332)
* fix: make buttons look like further buttons

* test: fix tests

* fix: off by one problem on firefox on mac

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* test: update snapshots

* test: update tests from merge to fit new button

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix: improve svg alignment

* test: renew snapshots

* fix: rollover bleed out of bottom

* fix: stoke alignment of corner

* fix: rollovers covering corners

* test: snapshot update

* fix: use rect as clip path to clean off unneeded anti aliasing

* fix: use rect as clip path to clean off unneeded anti aliasing

* fix: mistake left test text in

* test: updated snapshots

* fix: tweaks

* test: snapshots

* build: rebuild yarn lock file

* fix: remove incorrect yarn lock file

* fix: remove incorrect yarn integrity file

* build: correct lock file

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

--- a/frontend/src/components/atoms/button/Button.module.css
+++ b/frontend/src/components/atoms/button/Button.module.css
@@ -1,13 +1,15 @@
 .button {
   composes: text from '../../../globalStyles/Typography.module.css';
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 
 .button:not(:disabled) {
   cursor: pointer;
 }
-
+.button:disabled {
+    opacity: .5;
+}
 .styled:disabled {
   background-color: #ccefec;
   border-color: #ccefec;
